spacing fix and remove redundant helper

--- a/packages/design/tailwind/css/components.css
+++ b/packages/design/tailwind/css/components.css
@@ -133,7 +133,7 @@
   @apply gi-radio-base gi-w-6 gi-h-6 checked:before:gi-border-[5px] checked:before:gi-translate-x-[5px] checked:before:gi-translate-y-[5px] focus:before:gi-translate-x-[3px] focus:before:gi-translate-y-[3px]
 }
 .gi-radio-medium {
-  @apply gi-radio-base gi-w-[30px] gi-h-[30px] checked:before:gi-border-[7px] checked:before:gi-translate-x-1.5 checked:before:gi-translate-y-1.5 focus:before:gi-translate-x-1 focus:before:gi-translate-y-1
+  @apply gi-radio-base gi-w-8 gi-h-8 checked:before:gi-border-[7px] checked:before:gi-translate-x-[7px] checked:before:gi-translate-y-[7px] focus:before:gi-translate-x-[5px] focus:before:gi-translate-y-[5px]
 }
 .gi-radio-large {
   @apply gi-radio-base gi-w-11 gi-h-11 checked:before:gi-border-[10px] checked:before:gi-translate-x-[10px] checked:before:gi-translate-y-[10px] focus:before:gi-translate-x-[8px] focus:before:gi-translate-y-[8px]
